'Proposal of a technical architecture' further steps.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -119,7 +119,7 @@ Finally, conclusions are drawn in section \ref{conclusion}.
 
 \subsection{Linked Universities}
 \label{related-work:linked-universities}
-'Linked Universities' is "`\textit{an alliance of european universities engaged into exposing their public data as linked data}"'\footnote{\cite{daquin_linked_2014}} providing help and knowledge for other universities that wish to expose their public university resources as Linked Data. Addressing the problem of connecting data and developing new sites by inexperienced universities, the alliance provide information so they don't have to be re-learned. For this purpose the Linked Universities offering a portal as collaborative space with common vocabularies and practices for reusing, describing and sharing.
+'Linked Universities' is "`\textit{an alliance of european universities engaged into exposing their public data as linked data}"'\footnote{\cite{daquin_linked_2014}} providing help and knowledge for other universities that wish to expose their public university resources as Linked Data. Addressing the problem of connecting data and developing new sites by inexperienced universities, the alliance provide information so they don't have to be re-learned. For this purpose the Linked Universities offering a portal as collaborative space with common vocabularies and practices for reusing, describing and sharing. 
 
 Their goals are:(~\cite{daquin_linked_2014})
 
@@ -151,7 +151,7 @@ In Austria datasets of various governmental units from different areas of life a
 
 Meanwhile data is exposed in machine-readable and open formats, there has been little effort taken to provide it as Linked Open Data. However, Christian Weiss has designed a system\footnote{\url{http://cweiss.net/lod/} last accessed on 15.03.2016} in connection with his master thesis\footnote{C. Weiss, 'Transferring Open Government Data into the global Linked Open Data Cloud', 2013} to provide a subset of the Open Government Data provided by Vienna (\texttt{data.wien.gv.at}) as Linked Open Data. In the same year 2013 the project LODPilot\footnote{\url{http://lodpilot.at/}} was initiated to create an infrastructure to provide the basic datasets published on \texttt{data.gv.at} and \texttt{data.wien.gv.at} as Linked Open Data.
 
-Beside the open data portals, \texttt{Wegweiser}\footnote{\url{http://www.wegweiser.ac.at/}} is an early attempt of a set of Austrian universities to share information of public interest like course information, curricula and building plans in an open way. The information on Wegweiser is served only in a human readable format and therefore not easily processable by computers so that applications based on it can difficultly evolve. Furthermore, the service is not maintained any more and outdated. \texttt{Open Street Maps}\footnote{\url{https://www.openstreetmap.org/}} is a global service that make spatial information of Austria (a.o.), which has been collected by an open community, available in an open way. The University of Leipzig has build an infrastructure to provide this collected information as Linked Open Data with the project named \texttt{LinkedGeoData}\footnote{\url{http://linkedgeodata.org/About}}. \texttt{DBPedia}\footnote{\url{http://wiki.dbpedia.org/}} is another project of the mentioned university that extracts knowledge from Wikipedia and transforms it into Linked Open Data. For example, \texttt{DBPedia} contains a machine-processable description of the Vienna University of Technology\footnote{\url{http://dbpedia.org/page/Vienna_University_of_Technology}}. \texttt{Wikidata}\footnote{\url{https://www.wikidata.org/}} is a project similar to \texttt{DBPedia} and also provides knowledge about Austria in a machine-processable format. 
+Beside the open data portals, \texttt{Wegweiser}\footnote{\url{http://www.wegweiser.ac.at/}} is an early attempt of a set of Austrian universities to share information of public interest like course information, curricula and building plans in an open way. The information on Wegweiser is served only in a human readable format and therefore not easily processable by computers so that applications based on it can difficultly evolve. Furthermore, the service is not maintained any more and outdated. \texttt{Open Street Maps}\footnote{\url{https://www.openstreetmap.org/}} is a global service that make spatial information of Austria (a.o.), which has been collected by an open community, available in an open way. The University of Leipzig has build an infrastructure to provide this collected information as Linked Open Data with the project named \texttt{LinkedGeoData}\footnote{\url{http://linkedgeodata.org/About}}. \texttt{DBPedia}\footnote{\url{http://wiki.dbpedia.org/}} is another project of the mentioned university that extracts knowledge from Wikipedia and transforms it into Linked Open Data. For example, \texttt{DBPedia} contains a machine-readable description of the Vienna University of Technology\footnote{\url{http://dbpedia.org/page/Vienna_University_of_Technology}}. \texttt{Wikidata}\footnote{\url{https://www.wikidata.org/}} is a project similar to \texttt{DBPedia} and also provides knowledge about Austria in a machine-readable format. 
 
 \subsection{Linked Education}
 \label{related-work:linked-education}
@@ -357,7 +357,7 @@ is controlled by the demand on publishing the known datasets of this resource as
 The owner of a dataset is the organization or person that is responsible for the dataset and manages it. The exploration of the data owner is important for transforming the dataset into Linked Open Data, because the owner can authorize access to it and has specific expertise about it. 
 
 \item \textit{Data transformer}~\\
-Dependent on the format of the dataset, the data transformer can either be a program or a semi-automatic approach, where a human prepares the dataset for a program. A complete automatic approach is possible, if the datasets are available in a machine-processable format and if the content can be interpreted (e.g. CSV, XML). Whereas a semi-automatic approach is required, if the content of the dataset can not be interpreted (e.g. images, PDF or hidden in the text) or if the dataset is not available in a machine-processable format (e.g. human expertise). Then a human has to interpret and store the result in a appropriate format so that a automatic approach is applicable. The data sources and the corresponding transformation techniques are further discussed in Section \ref{technical-architecture-challenges:proposal}.
+Dependent on the format of the dataset, the data transformer can either be a program or a semi-automatic approach, where a human prepares the dataset for a program. A complete automatic approach is possible, if the datasets are available in a machine-readable format and if the content can be interpreted (e.g. CSV, XML). Whereas a semi-automatic approach is required, if the content of the dataset can not be interpreted (e.g. images, PDF or knowledge hidden in text) or furthermore if the dataset is not available in a machine-processable format (e.g. human expertise). Then a human has to interpret and store the result in a appropriate format so that a automatic approach is applicable. The data sources and the corresponding transformation techniques are further discussed in Section \ref{technical-architecture-challenges:proposal}.
 
 \end{itemize}
 
@@ -389,10 +389,10 @@ In order to overcome the environment of data silos and to support the evolvement
 	\item When someone looks up a URI, provide useful information, using the standards (RDF, RDFS, SPARQL)
 	\item Include links to other URIs. so that they can discover more things.
 \end{enumerate}
-Every thing mentioned in one or more datasets of the university shall be identified uniquely by an URI. The Audimax (main lecture hall) of the Vienna University of Technology with the room code \texttt{BAU176A} may for example be identified by \url{http://lod.tuwien.ac.at/room/BAU176A} and a visit of this HTTP location reveals all the known information about this room like capacity, event schedule, etc. in a machine-readable format. This can include links to the hosted events using the same approach with HTTP URIs identifying those events. In this case, the four principles would be fulfilled and a computer program can easily explore this machine-readable information following those links like a human following the links on web pages to gain further information. As mentioned above, following the principles leads to Linked Data. Linked Open Data extends Linked Data with the idea of publishing it in a open way.
+Every thing mentioned in one or more datasets of the university shall be identified uniquely by an URI. The Audimax (main lecture hall) of the Vienna University of Technology with the room code \texttt{BAU176A} may for example be identified by \url{http://lod.tuwien.ac.at/room/BAU176A} and a visit of this HTTP location reveals all the knowledge about this room like capacity, event schedule, etc. in a machine-readable format. This can include links to the hosted events using the same approach with HTTP URIs identifying those events. In this case, the four principles would be fulfilled and a computer program can easily explore this machine-readable information following those links like a human following the links on web pages to gain further information. As mentioned above, following the principles leads to Linked Data. Linked Open Data extends Linked Data with the idea of publishing it in an open way.
 \begin{quote} Open means anyone can freely access, use, modify, and share for any purpose (subject, at most, to requirements that preserve provenance and openness).\cite{_open_????}\end{quote}
 
-In order to transform demanded datasets of the university into Linked Data and publish it in an open way, a system architecture is required that faces the issues of diverging data sources and data freshness.\enquote{An important architectural pattern used in system development is the multitier architecture. It logically separates the functionality of the system in a number of layers and specifies the communication between those layers.}\cite{simperl_using_2013}. The proposed architecture (see figure \ref{fig:tac-high-level-architecture}) is composed of four tiers. The first tier represents the diverging forms of \textbf{\textit{data sources}} that can occur in an information environment at a university (see \ref{technical-architecture-challenges:proposal:data-source}). The second tier shows the \textbf{\textit{integration}} of such data sources into a central data storage for linked data also called triple store (see \ref{technical-architecture-challenges:proposal:integration}). The third tier shows the \textbf{\textit{provision}} of the stored linked data (see \ref{technical-architecture-challenges:proposal:provision}) so that developers can implement \textbf{\textit{applications}} based on it represented in the fourth tier . 
+In order to transform demanded datasets of the university into Linked Data and publish it in an open way, a system architecture is required that faces the issues of diverging data sources and data freshness.\enquote{An important architectural pattern used in system development is the multitier architecture. It logically separates the functionality of the system in a number of layers and specifies the communication between those layers.}\cite{simperl_using_2013}. The proposed architecture (see figure \ref{fig:tac-high-level-architecture}) is composed of four tiers. The first tier represents the diverging forms of \textbf{\textit{data sources}} that can occur in an information environment at a university (see \ref{technical-architecture-challenges:proposal:data-source}). The second tier shows the \textbf{\textit{integration}} of such data sources into a central data storage for linked data also called triple store (see \ref{technical-architecture-challenges:proposal:integration}). The third tier shows the \textbf{\textit{provision}} of the stored linked data (see \ref{technical-architecture-challenges:proposal:provision}) so that developers can implement \textbf{\textit{applications}} based on it represented in the fourth tier.  
 
 \begin{figure}[t]
 \centering \includegraphics*[width=1.0\columnwidth]{images/technical-architecture/lod_technical_architecture.png}
@@ -402,33 +402,65 @@ In order to transform demanded datasets of the university into Linked Data and p
 
 \subsubsection{Data sources}
 \label{technical-architecture-challenges:proposal:data-source}
-As mentioned earlier, the information environment of a university may consist of multiple independent services that evolved over time powered by data sources that do not met the principles of Linked Data like relational databases.  Nevertheless, there are techniques to integrate these diverging data sources into a Linked Data environment without reconstructing legacy services and work-flows, which is described in the \textbf{\textit{integration}} tier. In this section, the different forms of data sources that may occur in the information environment of a university are listed and described.
+As mentioned earlier, the information environment of a university may consist of multiple independent services that evolved over time powered by data sources that do not met the principles of Linked Data like relational databases. In order to encourage data owners to publish their data as Linked Open Data, Berners-Lee developed the following star rating system: \cite{berners-lee_linked_2006}\\
+\begin{tabular}{p{0.12\columnwidth}  p{0.78\columnwidth}}
+		$\bigstar$ & Available on the web (whatever format) but with an open licence, to be Open Data. \\
+		\hline
+		$\bigstar\bigstar$ & Available as machine-readable structured data (e.g. excel instead of image scan of a table)\\
+		\hline
+		$\bigstar\bigstar\bigstar$ & as ($\bigstar\bigstar$) plus non-proprietary format (e.g. CSV instead of excel)\\
+		\hline
+		$\bigstar\bigstar\bigstar\bigstar$ & All the above plus, Use open standards from W3C (RDF and SPARQL) to identify things, so that people can point at your stuff\\
+		\hline
+		$\bigstar\bigstar\bigstar\bigstar\bigstar$ & All the above, plus: Link your data to other people’s data to provide context\\
+\end{tabular}\\\\
+Nevertheless, there are techniques to integrate these diverging data sources into a five-star Linked Data environment without reconstructing legacy services and work-flows, which is described in the \textbf{\textit{integration}} tier. In this section, the different forms of data sources that may occur in the information environment of a university are listed. 
 
-\paragraph{Not machine-processable:} Not machine-processable sources of knowledge like the expertise of a human (e.g. which rooms are in which way accessible) or digital data that is hard to interpret (e.g. images, PDF files) have to be transformed by a human into data formats that can be processed and interpreted by computers in order to be managed by the proposed technical architecture.
+\paragraph{Not machine-readable:} Not machine-processable sources of knowledge like the expertise of a human (e.g. which rooms are in which way accessible) or not machine-readable data (e.g. images, PDF files) have to be transformed by a human into data formats that can be processed and interpreted by computers in order to be managed by the proposed technical architecture. Non machine-readable data like images or PDF files have a rating of one-star ($\bigstar$), if they are exposed on a public accessible web page. It is then considered as Open Data.
 
-\paragraph{Semi-structured files} 
+\paragraph{(Semi-)structured data:} A quick look at a data repository like \texttt{datahub.io} shows that a major part of datasets are released as CSV files or as proprietary excel files (xsl, xslx). The same phenomena can be observed at the Austrian open data portals \texttt{opendataportal.at} and \texttt{data.gv.at}. On one side it is a common way to exchange data in offices and on the other side an easy and inexpensive way to publish data. Universities are no exceptions, the Vienna University of Economics for example releases course information as CSV files on their open data portal. Data published in form of CSV files have a rating of three-stars ($\bigstar\bigstar\bigstar$), whereas released excel files have only a rating of two-stars ($\bigstar\bigstar$) due to the lacking openness of the format. RSS feeds, if used by the university, can also be a source for valuable structured information.
 
-\paragraph{Relational databases:} 
+\paragraph{Relational databases:} \enquote{Data is often stored in a relational database, perhaps powering an important legacy application. In such cases it is generally advisable to retain the existing data management infrastructure and software, so as not to disrupt legacy applications}.\cite{heath_linked_2011} Instead the \textit{\textbf{integration tier}} shows how to integrate the data of a relational database into a Linked Data system. The data of relational databases could be presented to the application user on public web pages in a human readable or also in a structured format. The data may also be accessible by a Web API.
 
-\subparagraph{Web APIs} are one way to publish the underlying data of a service in a structured format so that it can be processed by applications. It is common to provide results in formats such as XML and JSON. At the Vienna University of Technology, the central information system TISS has a RESTful API, which gives access to some data like course information or the address book.
+\paragraph{Web APIs:} Web APIs are one way to give access to particular data of a application in a structured format so that application developers on their hand can use them for their application. It is common to provide results in formats such as XML and JSON. At the Vienna University of Technology, the central information system TISS has a RESTful API, which gives access to some data like course information or the address book. Web APIs achieve a rating of $\bigstar\bigstar\bigstar$, if the API uses open and structured formats. However, this Web APIs have some limitations in the perspective of Linked Data. \begin{quote}Data returned from Web APIs typically exists as isolated fragments, lacking reliable onward links signposting the way to related data. Therefore, while Web APIs make data accessible on the Web, they do not place it truly in the Web, making it linkable and therefore discoverable.\cite{heath_linked_2011} \end{quote} Nevertheless, Web APIs are a good starting point and the \textit{\textbf{integration tier}} shows how to integrate data of Web APIs into a Linked Data system using wrappers.
 
-According to the star rating system of Tim Berners-Lee, Web APIs achieve a rating of $\star\star\star$, if the API uses standardized structured formats like XML and JSON. However, this Web APIs have some limitations in the perspective of Linked Data. \begin{quote}Data returned from Web APIs typically exists as isolated fragments, lacking reliable onward links signposting the way to related data. Therefore, while Web APIs make data accessible on the Web, they do not place it truly in the Web, making it linkable and therefore discoverable. \cite{heath_linked_2011} \end{quote} 
+\paragraph{Moodle:} \enquote{Moodle is an open-source e-learning application, written in PHP and widely used by teachers all over the world}.\cite{lukichev_empowering_????} Such an application is the source of a lot of unstructured data concerning course information and learning materials, but the information is whether public accessible nor machine-readable. Lukichev et. al. \cite{lukichev_empowering_????} described preliminary ideas for empowering the e-learning platform Moodle with rules and semantics, providing tutors a useful application for flexible course management and reporting. At the moment of writing Moodle does not have a plugin providing this capability. However, Holtham et. al. outline the development of a next-generation learning environment based on semantic web-based technologies and pedagogies of the mid-21st century in a position paper for 2020.\cite{holtham_moodle_2012}
 
-...
+\paragraph{MediaWiki:} \enquote{Wikis have become popular tools for collaboration on the web and many vibrant online communities employ wikis to exchange knowledge} \cite{krotzsch_semantic_2006} like students at universities. At the Vienna University of Technology the student representatives employed a Mediawiki for sharing experience and other knowledge about courses as well as about the university itself. Mediawiki is a widely-used open-source wiki written in PHP, originally for use on Wikipedia. The knowledge is usually exchanged in form of plain text and uploaded files like images, PDF files or similar multimedia content, so that it is not machine-readable. Semantic MediaWiki\footnote{\url{https://semantic-mediawiki.org/}} \enquote{is a semantically enhanced wiki engine that enables users to annotate the wiki’s contents with explicit, machine-readable information}.\cite{krotzsch_semantic_2006} This extension can also be installed for already running MediaWikis. It supports semantically enriched wiki pages and provides a Web API for gathering the machine-readable information. 
 
-\subparagraph{...}
+\paragraph{Content Management Systems:} Content Management Systems (CMS) are like wikis popular tools for publishing knowledge on the web; \enquote{common used for blogging to express personal or professional views on the world or on observed items that may be of interest to others.}\cite{bojars_using_2006} CMSs are not only used for blogging, but also for more general purposes. The Vienna University of Technology has set up a Typo3\footnote{\url{https://typo3.org/}} CMS to serve valuable information about the university and about some of it’s organizational units (e.g. interest group for accessibility). The same as with MediaWikis, the content published by these CMSs is valuable, but often not machine-readable. Particular CMSs provide modules that simplify the annotation of CMS’s content with explicit, machine-readable information. Drupal\footnote{\url{https://drupal.org/}} does for example automatically provide meta-data (title, author, topic, etc.) about the published content. In this case, the proposed \textbf{\textit{integration tier}} could integrate those meta-data into the system.
 
-\subparagraph{Semantic enriched web pages}
+\paragraph{Semantically enriched web pages:}
+
+\paragraph{Linked Open Data:} 
 
 \subsubsection{Integration}
 \label{technical-architecture-challenges:proposal:integration}
-...
+The \textit{\textbf{data source tier}} represents diverging data sources, which may be part of the information environment of a university. The \textit{\textbf{integration tier}} shows how to integrate the demanded and available datasets of those data sources into the system. The integration process consists of multiple steps, which are described in the following.
+
+\paragraph{Data acquisition} is the first step of the integration process and is required for acquiring the data that shall be integrated into the system. According to Simperl et.al \cite{simperl_using_2013} there are number of ways, in which the data consumed and integrated within the system may be accessed. The approach used for this proposed architecture is the }\textit{crawling pattern}, where the data is loaded in advance and stored in a local triple store so that it can be accessed efficiently. \enquote{The disadvantage of this pattern is that the data might not be up to date}. An alternative approach is the \textit{On-The-Fly Dereferencing pattern}, \enquote{where the URIs are dereferenced at the moment that the system requires the data}. The advantage is up-to-data data, but the performance may be affected when the data transformation and dereferencing is costly.\cite{simperl_using_2013}.
+
+\subparagraph{Physical wrapper:}
+
+
+\subparagraph{Crawling for RDFa and microdata:}
+
+\subparagraph{Linked Data wrapper:}
 
 \subsubsection{Provision}
 \label{technical-architecture-challenges:proposal:provision}
-In the first two layers, the demanded and available datasets are transformed into Linked Data and integrated into a local storage named triple store.
+In the \textit{\textbf{integration tier}} the demanded and available datasets were integrated into a local triple store. The \textit{\textbf{provision tier}} gives now an overview of the different ways to grant the end user access to the linked data stored in the local triple store. The advantage of SPARQL endpoints is that the end user can flexibly request a particular subset of the data stored in the local triple store.
 
+\paragraph{SPARQL endpoint:} SPARQL is a language that can be used to query a RDF dataset or in this case the whole triple store. A SPARQL endpoint is a web service that can process SPARQL requests and returns the corresponding result.
 
+\paragraph{RESTful API:} \enquote{RESTful APIs are a programming interface implemented using HTTP and the principles of REST (Representational State Transfer) to allow actions on Web resources}.\cite{hyland_linked_????}
+In order to not violate the principles of Linked Open Data the API must be open. Linked data API\footnote{\url{http://www.epimorphics.com/web/projects/linked-data-api}} can be used to provide a RESTful web service to the end user making also SPARQL requests possible.
+
+\paragraph{CMS enriched with RDFa:}
+
+\subsubsection{Vocabularies}
+\label{technical-architecture-challenges:proposal:provision}
+...
 
 \subsection{Challenges}
 \label{technical-architecture-challenges:challenges}
