--- a/literature.bib
+++ b/literature.bib
@@ -118,3 +118,44 @@
 	urldate = {2016-03-27},
 	file = {The Open Definition - Open Definition - Defining Open in Open Data, Open Content and Open Knowledge:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/KTAHZMFF/opendefinition.org.html:text/html}
 }
+
+@article{lukichev_empowering_????,
+	title = {Empowering {Moodle} with {Rules} and {Semantics}},
+	author = {Lukichev, Sergey and Diaconescu, Mircea and Giurca, Adrian}
+}
+
+@inproceedings{bojars_using_2006,
+	title = {Using semantics to enhance the blogging experience},
+	booktitle = {The {Semantic} {Web}: {Research} and {Applications}, 3rd {European} {Semantic} {Web} {Conference}, {ESWC} 2006, {Budva}},
+	publisher = {Springer},
+	author = {Bojārs, Uldis and Breslin, John G. and Möller, Knud},
+	year = {2006},
+	pages = {679--696}
+}
+
+@inproceedings{holtham_moodle_2012,
+	title = {Moodle 2020: {A} {Position} {Paper}},
+	author = {Holtham, Clive and Rich, Martin and Norris, Leona},
+	year = {2012}
+}
+
+@incollection{krotzsch_semantic_2006,
+	address = {Berlin, Heidelberg},
+	title = {The {Semantic} {Web} - {ISWC} 2006: 5th {International} {Semantic} {Web} {Conference}, {ISWC} 2006, {Athens}, {GA}, {USA}, {November} 5-9, 2006. {Proceedings}},
+	isbn = {978-3-540-49055-5},
+	url = {http://dx.doi.org/10.1007/11926078_68},
+	booktitle = {Semantic {MediaWiki}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Krötzsch, Markus and Vrandečić, Denny and Völkel, Max},
+	editor = {Cruz, Isabel and Decker, Stefan and Allemang, Dean and Preist, Chris and Schwabe, Daniel and Mika, Peter and Uschold, Mike and Aroyo, Lora M.},
+	year = {2006},
+	pages = {935--942}
+}
+
+@misc{hyland_linked_????,
+	title = {Linked {Data} {Glossary}},
+	url = {https://www.w3.org/TR/ld-glossary/#rest-api},
+	urldate = {2016-03-30},
+	author = {Hyland, Bernadette and Atemezing, Ghislain and Pendleton, Michael and Srivastava, Biplav},
+	file = {Linked Data Glossary:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/CXVQNG4T/ld-glossary.html:text/html}
+}
